# HuGo

./: .env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  process_lua_files.py  sdkconfig.defaults
components/built_in_led/: built_in_led.c  built_in_led.h  built_in_led.lua
components/built_in_led/test/: CMakeLists.txt  test_built_in_led.c
components/chassis/: CMakeLists.txt  chassis.c  chassis.h  chassis.lua
components/chassis/test/: CMakeLists.txt  test_chassis.c
components/display/: CMakeLists.txt  display.c  display.h  display.lua  display_hierarchy.plantuml  font8x16.py  font8x8.h  graphics.h  ssd1306.c  ssd1306.h
components/display/test/: test_graphics.c
components/event_loop/: event_loop.c  event_loop.h
components/event_loop/test/: CMakeLists.txt  test_event_loop.c
components/gpio/: CMakeLists.txt  gpio.c  gpio_abstraction.h
components/gpio/test/: CMakeLists.txt  gpio_mocks.c  gpio_mocks.h  test_gpio.c
components/hugo_defines/: CMakeLists.txt  hugo_defines.h
components/i2c/: CMakeLists.txt  i2c.c  i2c.cpp
components/i2c_wrapper/: CMakeLists.txt  i2c_wrapper.c  i2c_wrapper.h
components/ir_remote/: CMakeLists.txt  driver_rtm_abstraction.h  ir_remote.c  ir_remote.h  ir_remote.lua
components/ir_remote/test/: test_ir_remote.c
components/lua/: CMakeLists.txt  lua_partition.h  process_lua_files.py
components/lua_partition/: CMakeLists.txt
components/mockups/: CMakeLists.txt  driver_gpio_mocks.h  driver_rtm_mocks.c  gpio_mocks.h
components/mpu9250/: CMakeLists.txt  mpu9250.lua  mpu9250_lua_interface.c  mpu9250_lua_interface.h
components/timer/: CMakeLists.txt  timer.c  timer.h  timer.lua
components/timer/test/: CMakeLists.txt  test_timer.c
esp/components/built_in_led/: built_in_led.c
esp/components/display/: README.txt  graphics.c
esp/components/event_loop/: CMakeLists.txt
esp/components/gpio/: CMakeLists.txt
esp/main/: main.c  main.lua
hw/: connectors.drawio  hugo.skp
main/: CMakeLists.txt  event_loop.c  event_loop.h  hugo_defines.h  hugo_error.h  main.c  main.lua  process_lua_files.py  test.lua  test2.lua
main/modules/: program.lua
main/modules/adapters/: build_in_led_adapter.c  build_in_led_adapter.h  program_adapter.c  program_adapter.h  timer_adapter.c
main/modules/behaviors/: build_in_led_beh.lua
main/modules/built_in_led/: built_in_led.c  built_in_led.h  built_in_led.lua
main/modules/chassis/: chassis.c  chassis.h
main/modules/gpio/: gpio.c  gpio.h  gpio.lua
main/modules/interfcs/: build_in_led_int.lua
main/modules/ir_remote/: ir_remote.c  ir_remote.h  ir_remote.lua
main/modules/program/: program.lua
main/modules/timer/: timer.c  timer.h  timer.lua
misc/: hugo-logo.drawio  hugo.drawio
pcb/datasheets/: LM66100DCKR.lbr
shells/: 1x3.rsdoc  base.rsdoc  base3x4.rsdoc  chassis.rsdoc  generic-block-shell-24x16.rsdoc  generic.rsdoc  main-block-shell-24x16.rsdoc  open-24x26.rsdoc  power.rsdoc  rotatoion_sensor_base.rsdoc
shells/bases/: 1x3.rsdoc  2x3.rsdoc  base-connectors.rsdoc  base3x4.rsdoc
shells/tiny-blocks/: button.rsdoc  half-seze-main-block-shell.rsdoc  led-24x26.rsdoc  open-24x16.rsdoc  open-24x26-3.rsdoc  open-24x26.rsdoc  open3A.rsdoc  positionable.rsdoc
src/: .env  .pylintrc  CMakeLists.txt  Makefile  devel_to_firmware.py  export_devel.py  flash_hugo.sh  flash_hugo_plus.sh  hugo_terminal.py  hugo_terminal_origin.py  micropython_mock.py  partitions.csv  requirements.txt  sdkconfig.defaults  test.sh
src/components/lua_partition/: CMakeLists.txt  lua_partition.c  lua_partition.h
src/devel/: ___active_variable.py  ___ble.py  ___block_base.py  ___button_block.py  ___chassis.py  ___display_block.py  ___distance_block.py  ___extended_block_base.py  ___ir_block.py  ___main_block.py  ___motor_driver_block.py  ___planner.py  ___power_block.py  ___rgb_led_block.py  ___serial_logger.py  ___shell.py  ___smoothed_variable.py  boot.py  events.py
src/hugo_terminal/: argument_processor.py  ble.py  ble_dasboard_agent.py  buildozer.spec  command_id.py  gui.py  hugo_dash_board.py  hugo_logger.py  main.py  shelly_dashboard_agent.py  terminal.py
src/main/: main.c  main.lua
src/terminal_kivy/: argument_processor.py  ble.py  terminal.py
src/test/: aaa__init__.py  hugo_test_case.py  test_active_variable.py  test_ir_block.py  test_quantity_base.py  test_shell.py
src/tiny_blocks/: tiny_block_i2c_addressees.txt
src/upload/: events.py
src_deprecated/: partitions.csv
src_deprecated/main/: main.c
src_deprecated/test/: sdkconfig.defaults
test/: CMakeLists.txt  sdkconfig.defaults
test/main/: CMakeLists.txt  tests.c
tiny_blocks/: block_base.cpp  block_base.h
tiny_blocks/rgb_led_block/: rgb_led_block.ino
tiny_blocks/tiny_block_base/: README.md  hugo_defines.h  hugo_tiny_wire.h  library.properties
tiny_blocks/tiny_block_base_arduino/: hugo_defines.h  hugo_tiny_block_defines.h  hugo_tiny_wire.cpp  hugo_tiny_wire.h
tiny_blocks/tiny_block_button_arduino/: tiny_block_button_arduino.ino
tiny_blocks/tiny_block_display/: tiny_block_display.ino
tiny_blocks/tiny_block_display_arduino/: tiny_block_display_arduino.h  tiny_block_display_arduino.ino
tiny_blocks/tiny_block_distance/: tiny_block_distance.ino
tiny_blocks/tiny_block_ir/: tiny_block_ir.ino
tiny_blocks/tiny_block_ir_arduino/: README.md
tiny_blocks/tiny_block_motor_driver_arduino/: motor.cpp  motor.h  tiny_block_motor_driver_arduino.ino
tiny_blocks/tiny_block_power_arduino/: tiny_block_power_arduino.ino
tiny_blocks/tiny_block_rgb_led_arduino/: tiny_block_rgb_led_arduino.h  tiny_block_rgb_led_arduino.ino
tools/: ble_client.py  devel_to_firmware.py  hugo_terminal.py
tools/devel/: ___active_variable.py  ___ble.py  ___block_base.py  ___button_block.py  ___chassis.py  ___display_block.py  ___distance_block.py  ___extended_block_base.py  ___main_block.py  ___motor_driver_block.py  ___planner.py  ___power_block.py  ___power_mgmt.py  ___rgb_led_block.py  ___shell.py  ___smoothed_variable.py  ___virtual_keyboard.py  ___vl53l1x.py  boot.py  events.py  power_block.py
tools/export/: events.py
(+434 files in other folders)
